# Opencv_Practice

./: ImageProcessing.cpp  Task 3 Opencv.docx  Task1.docx
ImageProcessing/: CMakeLists.txt  ImageProcessing.cpp
opencvTask3/: CMakeLists.txt  Channels.cpp  Gamma.cpp  Grayscale_2.cpp  Thresholding_3.cpp  hist.cpp
